--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,6 +45,7 @@
             android:layout_marginEnd="32dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
+            android:inputType="textEmailAddress"
             android:background="@drawable/edit_text_background1"
             android:hint="Type your Username here"
             android:textSize="18sp"
