--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".Welcome">
 
     <TextView
@@ -14,6 +15,7 @@
         android:layout_marginTop="128dp"
         android:layout_marginEnd="90dp"
         android:layout_marginBottom="529dp"
+        android:textColor="@color/white"
         android:gravity="center"
         android:text="WELCOME"
         android:textSize="40dp"
@@ -48,6 +50,7 @@
         android:layout_marginTop="158dp"
         android:layout_marginEnd="13dp"
         android:layout_marginBottom="291dp"
+        android:textColor="@color/white"
         android:text="Login Succesfully"
         android:textSize="35dp"
         android:textStyle="bold"
