--- a/app/src/main/res/layout/activity_chat_page.xml
+++ b/app/src/main/res/layout/activity_chat_page.xml
@@ -4,17 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".Chat_page">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <!-- Chat messages list view -->
         <ListView
             android:id="@+id/chat_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:backgroundTint="@color/black"
             android:divider="@null"
             android:dividerHeight="0dp"
             android:layout_above="@+id/chat_input_layout"/>
@@ -31,6 +34,7 @@
             <!-- Chat input text field -->
 
             <!-- Send button -->
+
             <EditText
                 android:id="@+id/chat_input_text"
                 android:layout_width="300dp"
@@ -39,19 +43,20 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:background="@color/black"
                 android:hint="Message"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white" />
 
             <Button
                 android:id="@+id/send_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:text="Send"/>
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="1dp"
+                android:layout_marginEnd="9dp"
+                android:text="Send" />
 
         </RelativeLayout>
 
